<?xml version="1.0"?>
<package format="2">
  <name>ros_concepts</name>
  <version>0.1.0</version>
  <description>The ros_concepts package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author email="lstelzner@gmail.com">laura</author>
  <maintainer email="lstelzner@gmail.com">laura</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
